This commit add better documented code and fixes the readability on smallest screens

--- a/Style.css
+++ b/Style.css
@@ -8,44 +8,38 @@
   */
    /* All pages  */
    * {
-       /* background-color: steelblue; */
-       background-color: rgb(167, 200, 228);
-       /* background-color: steelblue; */
+    text-align: center;
+    color: #181613;
+    background-color: rgb(167, 200, 228);
+     
 
    }
 
    body {
        background-color: transparent;
    }
-
    .selector-for-some-widget {
     box-sizing: content-box;
   }
-h1{
+h1, h2, h3{
     background-color: transparent;
     font-family: 'Montserrat', sans-serif;
-    color: #181613;
-
 }
 
 h2 {
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: #181613;
-    font-size: 20px;
-
+       font-size: 20px;
 }
 
   /* Footer */
-
+/* containig position sticky */
 footer {
-    position: fixed;
+    
+    position: sticky;
     left: 0;
     bottom: 0;
     width: 100%;
-     text-align: center;
-     margin-top: 20px;
-     color: #181613;
+    margin-top: 20px;
+     
 }
 
 /*  Index page  */
@@ -54,44 +48,27 @@ footer {
     margin-left: 10px;
     margin-top: 60px;
 }
-
-
-
-
     .mtext{
-        margin-top: 60px;
+        margin-top: 10px;
         padding: 0;
     }
 
     /* Contact Form*/
     form{
-
         margin: 0.5px auto 0 ;
         width: 50%;
-        text-align: center;
+   
     }
 
-
     /* Portfolio */
-    .resume {
-        margin:.5px auto 0;
-        width: 100%;
-        text-align: center;
+.card {
+    background-color: transparent;
+    margin-top: 20px;
 }
-
-
-
 h3 {
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: #181613;
-    font-size: 12px;
-}
-
-section .col-md-6 {
-    /* margin-left: 15px; */
+    font-size: 16px;
 }
 
 .row {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
